--- a/Sentiment Analysis with TFLearn.ipynb
+++ b/Sentiment Analysis with TFLearn.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reviews = pd.read_csv('reviews.txt', header=None)\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "krell :  30\n"
+      "freely :  30\n"
      ]
     }
    ],
@@ -156,11 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word2idx = ## create the word-to-index dictionary here"
+    "## create the word-to-index dictionary here\n",
+    "word2idx = {}\n",
+    "for i,word in enumerate(vocab):\n",
+    "    word2idx[word] = i"
    ]
   },
   {
@@ -180,15 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def text_to_vector(text):\n",
-    "    \n",
-    "    pass"
+    "    word_vec = np.zeros(len(vocab), dtype=np.int_)\n",
+    "    for word in text.split(' '):\n",
+    "        idx = word2idx.get(word, None)\n",
+    "        if idx is not None:\n",
+    "            word_vec[idx] += 1 \n",
+    "    return np.array(word_vec)"
    ]
   },
   {
@@ -209,9 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 2, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_to_vector('The tea is for a party to celebrate '\n",
     "               'the movie so she has no time for a cake')[:65]"
@@ -226,8 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_vectors = np.zeros((len(reviews), len(vocab)), dtype=np.int_)\n",
@@ -237,9 +259,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 18,   9,  27,   1,   4,   4,   6,   4,   0,   2,   2,   5,   0,\n",
+       "          4,   1,   0,   2,   0,   0,   0,   0,   0,   0],\n",
+       "       [  5,   4,   8,   1,   7,   3,   1,   2,   0,   4,   0,   0,   0,\n",
+       "          1,   2,   0,   0,   1,   3,   0,   0,   0,   1],\n",
+       "       [ 78,  24,  12,   4,  17,   5,  20,   2,   8,   8,   2,   1,   1,\n",
+       "          2,   8,   0,   5,   5,   4,   0,   2,   1,   4],\n",
+       "       [167,  53,  23,   0,  22,  23,  13,  14,   8,  10,   8,  12,   9,\n",
+       "          4,  11,   2,  11,   5,  11,   0,   5,   3,   0],\n",
+       "       [ 19,  10,  11,   4,   6,   2,   2,   5,   0,   1,   2,   3,   1,\n",
+       "          0,   0,   0,   3,   1,   0,   1,   0,   0,   0]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Printing out the first 5 word vectors\n",
     "word_vectors[:5, :23]"
@@ -256,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +316,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.],\n",
+       "       [ 1.,  0.],\n",
+       "       [ 0.,  1.],\n",
+       "       ..., \n",
+       "       [ 0.,  1.],\n",
+       "       [ 0.,  1.],\n",
+       "       [ 0.,  1.]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainY"
    ]
@@ -349,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Network building\n",
@@ -377,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = build_model()"
@@ -398,6 +461,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -418,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictions = (np.array(model.predict(testX))[:,0] >= 0.5).astype(np.int_)\n",
@@ -436,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Helper function that uses your model to predict sentiment\n",
