--- a/Sentiment Analysis with TFLearn.ipynb
+++ b/Sentiment Analysis with TFLearn.ipynb
@@ -407,18 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Network building\n",
-    "def build_model():\n",
+    "def build_model(input_units):\n",
     "    # This resets all parameters and variables, leave this here\n",
     "    tf.reset_default_graph()\n",
     "    \n",
     "    #### Your code ####\n",
+    "    #Input\n",
+    "    net = tflearn.input_data([None, input_units])\n",
+    "    # Hidden\n",
+    "    net = tflearn.fully_connected(net, 200, activation='ReLU')\n",
+    "    net = tflearn.fully_connected(net, 25, activation='ReLU')\n",
+    "    # Output\n",
+    "    net = tflearn.fully_connected(net, 2, activation='softmax')\n",
+    "    \n",
+    "    net = tflearn.regression(net, optimizer='sgd', learning_rate=0.1, loss='categorical_crossentropy')\n",
     "    \n",
     "    model = tflearn.DNN(net)\n",
     "    return model"
@@ -437,13 +446,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "model = build_model()"
+    "model = build_model(10000)"
    ]
   },
   {
@@ -459,15 +468,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Step: 21014  | total loss: \u001b[1m\u001b[32m0.23618\u001b[0m\u001b[0m | time: 3.730s\n",
+      "| SGD | epoch: 121 | loss: 0.23618 - acc: 0.8970 -- iter: 22272/22275\n",
+      "Training Step: 21015  | total loss: \u001b[1m\u001b[32m0.22620\u001b[0m\u001b[0m | time: 4.759s\n",
+      "| SGD | epoch: 121 | loss: 0.22620 - acc: 0.9011 | val_loss: 0.44740 - val_acc: 0.8267 -- iter: 22275/22275\n",
+      "--\n"
+     ]
+    }
+   ],
    "source": [
     "# Training\n",
-    "model.fit(trainX, trainY, validation_set=0.1, show_metric=True, batch_size=128, n_epoch=10)"
+    "model.fit(trainX, trainY, validation_set=0.01, show_metric=True, batch_size=128, n_epoch=100)"
    ]
   },
   {
@@ -481,11 +501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy:  0.87\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = (np.array(model.predict(testX))[:,0] >= 0.5).astype(np.int_)\n",
     "test_accuracy = np.mean(predictions == testY[:,0], axis=0)\n",
@@ -501,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -517,18 +543,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: Moonlight is by far the best movie of 2016.\n",
+      "P(positive) = 0.906 : Positive\n",
+      "Sentence: It's amazing anyone could be talented enough to make something this spectacularly awful\n",
+      "P(positive) = 0.003 : Negative\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"Moonlight is by far the best movie of 2016.\"\n",
     "test_sentence(sentence)\n",
     "\n",
     "sentence = \"It's amazing anyone could be talented enough to make something this spectacularly awful\"\n",
-    "test_sentence(sentence)"
+    "test_sentence(sentence)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
